--- a/MyAppEnglish/app/src/main/AndroidManifest.xml
+++ b/MyAppEnglish/app/src/main/AndroidManifest.xml
@@ -16,7 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FilmesActivity"></activity>
+        <activity android:name=".FilmesActivity" />
+        <activity
+            android:name=".CenasActivity"
+            android:label="@string/title_activity_cenas"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TabActivity"
+            android:label="@string/title_activity_tab"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
