--- a/MyAppEnglish/app/src/main/AndroidManifest.xml
+++ b/MyAppEnglish/app/src/main/AndroidManifest.xml
@@ -15,20 +15,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FilmesActivity" />
+        <activity android:name=".view.FilmesActivity" />
         <activity
-            android:name=".CenasActivity"
+            android:name=".view.CenasActivity"
             android:label="@string/title_activity_cenas"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".TabActivity"
+            android:name=".view.TabActivity"
             android:label="@string/title_activity_tab"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
